# jobsuche-api

./: .pre-commit-config.yaml  .spectral.yaml  CNAME  README.md  api_example.R  api_example.php  api_example.py  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/docs/: DefaultApi.md  JobDetails.md  JobDetailsArbeitsorteInner.md  JobDetailsArbeitsorteInnerKoordinaten.md  JobDetailsArbeitsorteItemsKoordinaten.md  JobDetailsAusbildungenInner.md  JobDetailsEintrittszeitraum.md  JobDetailsFertigkeitenInner.md  JobDetailsFuehrungskompetenzen.md  JobDetailsSprachkenntnisseInner.md  JobDetailsStellenlokationenInner.md  JobDetailsStellenlokationenInnerAdresse.md  JobDetailsStellenlokationenInnerAdresseKoordinaten.md  JobDetailsVeroeffentlichungszeitraum.md  JobSearchResponse.md  JobSearchResponseEmbedded.md  JobSearchResponseEmbeddedJobsInner.md  JobSearchResponseEmbeddedJobsItemsArbeitsort.md  JobSearchResponseEmbeddedJobsItemsArbeitsortKoordinaten.md  JobSearchResponseEmbeddedJobsItemsLinks.md  JobSearchResponseEmbeddedJobsItemsLinksArbeitgeberlogo.md  JobSearchResponseEmbeddedJobsItemsLinksDetails.md  JobSearchResponseEmbeddedJobsItemsLinksJobdetails.md  JobSearchResponseFacettenInner.md  JobSearchResponseFacettenInnerBefristung.md  JobSearchResponseFacettenItemsAuswahlInner.md  JobSearchResponseParserResult.md  JobSearchResponseParserResultKoordinatenInner.md  JobSearchResponseStellenangeboteInner.md  JobSearchResponseStellenangeboteInnerArbeitsort.md  (+1 more)
(+151 files in other folders)
